manifests/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitacion-devops
  labels:
    cattle.io/creator: norman
    app: capacitacion-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capacitacion-devops
  template:
    metadata:
      labels:
        app: capacitacion-devops
    spec:
      containers:
        - name: capacitacion-devops
          image: imagekeyword
          ports:
            - name: 80tcp01
              containerPort: 443
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: Always
          securityContext:
            capabilities: {}
            privileged: false
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
          stdin: true
          tty: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      affinity: {}
      schedulerName: default-scheduler
      dnsConfig: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: capacitacion-devops
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: capacitacion-devops
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: capacitacion-devops
  namespace: default
spec:
  defaultBackend:
    service:
      name: capacitacion-devops
      port:
        number: 8080
  rules:
  - host: proeyecto1.labdevops.nh.inet
    http:
      paths:
      - backend:
          service:
            name: capacitacion-devops
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - proeyecto1.labdevops.nh.inet
    secretName: certdevops
